spec/lib/fs/folder_core/errors/messages/folderEmpty.js
// Generated by CoffeeScript 2.4.1
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive([
      {
        it: 'returns folder empty message for title and path',
        i: ['title',
      'path'],
        e: {
          title: "Module 'title' folder empty",
          messages: ["No files found in 'path'."]
        }
      }
    ]);
  };

}).call(this);
